# ril-py

./: .cirrus.yml  .gitignore  .readthedocs.yml  Cargo.toml  LICENSE  README.md  pyproject.toml  ril.pyi  setup.py
.github/workflows/: py-binding.yml
.github/workflows/scripts/: site_template.py
docs/: conf.py  index.rst  ril.rst
site/: index.html
src/: draw.rs  error.rs  font.rs  image.rs  lib.rs  pixels.rs  sequence.rs  text.rs  types.rs  utils.rs  workaround.rs
test/: conftest.py  test_image.py
