[package]
name = "ril-py"
authors = ["Cryptex"]
version = "0.4.0"
license = "MIT"
edition = "2021"
description = "Rust Imaging Library's Python binding: A performant and high-level image processing library for Python written in Rust"
repository = "https://github.com/Cryptex-github/ril-py"
homepage = "https://github.com/Cryptex-github/ril-py"
readme = "README.md"
keywords = ["ril", "imaging", "image", "processing", "editing"]
categories = ["encoding", "graphics", "multimedia", "visualization"]

[lib]
name = "ril"
crate-type = ["cdylib"]

[dependencies]
ril = { git = "https://github.com/jay3332/ril", features = ["all"] }
pyo3 = { version = "0.16", features = ["extension-module", "abi3-py37"] }
fontdue = { version = "0.7" }
