[project]
name = "ril"
version = "0.1.0"
license = { text = "MIT" }
authors = [ { name = "Cryptex" } ]
requires-python = ">=3.7"
readme = "README.md"
description="Rust Imaging Library's Python binding: A high-level image processing crate for Python written in Rust"

[project.urls]
homepage = "https://github.com/Cryptex-github/ril-py"

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"
