[project]
name = "ril"
version = "0.4.0"
license = { text = "MIT" }
authors = [ { name = "Cryptex" } ]
requires-python = ">=3.7"
readme = "README.md"
description = "Rust Imaging Library's Python binding: A performant and high-level image processing library for Python written in Rust"

[project.urls]
homepage = "https://github.com/Cryptex-github/ril-py"

[project.optional-dependencies]
docs = [
    "sphinx",
    "furo",
    "sphinxext-opengraph",
    "sphinx-copybutton"
]

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"
